--- a/single.html
+++ b/single.html
@@ -2,7 +2,7 @@
  * @Author: reber
  * @Mail: reber0ask@qq.com
  * @Date: 2019-04-10 10:45:02
- * @LastEditTime: 2019-07-25 14:28:05
+ * @LastEditTime: 2019-08-15 14:52:10
  -->
  <html>
     <head>
@@ -185,6 +185,10 @@
                 <tr>
                     <td class="td1">查 MD5 解密</td>
                     <td class="td2"><a href="http://www.chamd5.org">http://www.chamd5.org</a></td>
+                </tr>
+                <tr>
+                    <td class="td1">Md5 Decrypt & Encrypt</td>
+                    <td class="td2"><a href="https://md5decrypt.net">https://md5decrypt.net/</a></td>
                 </tr>
                 <tr>
                     <td class="td1">Windows 解密</td>
