--- a/static/single.html
+++ b/static/single.html
@@ -2,7 +2,7 @@
  * @Author: reber
  * @Mail: reber0ask@qq.com
  * @Date: 2019-04-10 10:45:02
- * @LastEditTime: 2019-08-15 14:52:10
+ * @LastEditTime: 2019-08-19 15:42:50
  -->
  <html>
     <head>
@@ -73,6 +73,13 @@
                         <a href="https://ip.cn">https://ip.cn</a> ||
                         <a href="http://www.ip138.com">http://www.ip138.com</a> ||
                         <a href="http://vxcube.com">http://vxcube.com</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="td1">域名查询</td>
+                    <td class="td2">
+                        <a href="http://vxcube.com">http://vxcube.com</a> ||
+                        <a href="https://domainbigdata.com">https://domainbigdata.com</a>
                     </td>
                 </tr>
                 <tr>
