--- a/single.html
+++ b/single.html
@@ -2,7 +2,7 @@
  * @Author: reber
  * @Mail: reber0ask@qq.com
  * @Date: 2019-04-10 10:45:02
- * @LastEditTime: 2019-08-19 15:42:50
+ * @LastEditTime: 2019-08-19 15:52:19
  -->
  <html>
     <head>
@@ -71,8 +71,7 @@
                     <td class="td1">IP 查询</td>
                     <td class="td2">
                         <a href="https://ip.cn">https://ip.cn</a> ||
-                        <a href="http://www.ip138.com">http://www.ip138.com</a> ||
-                        <a href="http://vxcube.com">http://vxcube.com</a>
+                        <a href="http://www.ip138.com">http://www.ip138.com</a>
                     </td>
                 </tr>
                 <tr>
