--- a/404.html
+++ b/404.html
@@ -1,9 +1,10 @@
+
 <html>
     <head>
         <meta http-equiv="content-type" content="text/html; charset=utf-8">
         <title>404 - 找不到文件或目录。</title>
         <style type="text/css">
-            body,h2,li,p {font: 9pt/12pt 宋体}
+            body,h2,li,p {font: 9pt 宋体}
             h1 {font: 12pt/15pt 宋体}
             a:link { color: red }
             a:visited { color: maroon }
@@ -33,10 +34,10 @@
         </tr>
         </table>
     
-        <div style="width:100%; height:100%; z-index:-1">
+        <div style="width:100%; height:55%; z-index:-1">
         </div>
     
-        <div style="width:85%;margin:0 auto">
+        <div style="width:90%;margin:0 auto">
             <pre style = 'border:dashed 5px blue;font-size:20px;'>
     hugo：<a href="https://github.com/spf13/hugo/releases">https://github.com/spf13/hugo/releases</a>
     nmap：<a href="https://nmap.org/download.html">https://nmap.org/download.html</a>
