--- a/about/index.html
+++ b/about/index.html
@@ -88,7 +88,7 @@
  * @Author: reber
  * @Mail: reber0ask@qq.com
  * @Date: 2019-04-10 10:45:00
- * @LastEditTime: 2019-09-26 12:17:56
+ * @LastEditTime: 2019-10-08 11:15:00
  -->
 
 <h3 id="id">ID</h3>
@@ -100,7 +100,7 @@
 <h3 id="e-mail">E-mail</h3>
 
 <ul>
-<li>reber0ask#163.com</li>
+<li>reber0ask#protonmail.com</li>
 </ul>
 
 <h3 id="wechat-qq">WeChat &amp; QQ</h3>
