--- a/static/single.html
+++ b/static/single.html
@@ -2,7 +2,7 @@
  * @Author: reber
  * @Mail: reber0ask@qq.com
  * @Date: 2019-04-10 10:45:02
- * @LastEditTime: 2019-08-19 15:52:19
+ * @LastEditTime: 2019-10-08 17:05:36
  -->
  <html>
     <head>
@@ -89,7 +89,8 @@
                     <td class="td1">临时手机号</td>
                     <td class="td2">
                         <a href="https://zusms.com/receiving-sms">https://zusms.com/receiving-sms</a> ||
-                        <a href="https://smsreceivefree.com">https://smsreceivefree.com</a>
+                        <a href="https://smsreceivefree.com">https://smsreceivefree.com</a> ||
+                        <a href="https://www.yinsixiaohao.com">https://www.yinsixiaohao.com</a>
                     </td>
                 </tr>
                 <tr>
