--- a/single.html
+++ b/single.html
@@ -2,7 +2,7 @@
  * @Author: reber
  * @Mail: reber0ask@qq.com
  * @Date: 2019-04-10 10:45:02
- * @LastEditTime: 2019-10-08 17:05:36
+ * @LastEditTime: 2019-11-12 13:35:34
  -->
  <html>
     <head>
@@ -291,6 +291,10 @@
                 <tr>
                     <td class="td1">编辑器漏洞手册</td>
                     <td class="td2"><a href="https://navisec.it/编辑器漏洞手册/">https://navisec.it/编辑器漏洞手册/</a></td>
+                </tr>
+                <tr>
+                    <td class="td1">Metasploit Cheat Sheet</td>
+                    <td class="td2"><a href="https://www.comparitech.com/net-admin/metasploit-cheat-sheet/">https://www.comparitech.com/net-admin/metasploit-cheat-sheet/</a></td>
                 </tr>
             </table>
         </div>
