--- a/single.html
+++ b/single.html
@@ -2,7 +2,7 @@
  * @Author: reber
  * @Mail: reber0ask@qq.com
  * @Date: 2019-04-10 10:45:02
- * @LastEditTime: 2019-11-12 13:35:34
+ * @LastEditTime: 2019-12-16 00:57:34
  -->
  <html>
     <head>
@@ -72,6 +72,12 @@
                     <td class="td2">
                         <a href="https://ip.cn">https://ip.cn</a> ||
                         <a href="http://www.ip138.com">http://www.ip138.com</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="td1">IPIP.NET</td>
+                    <td class="td2">
+                        <a href="https://www.ipip.net/">https://www.ipip.net/</a>
                     </td>
                 </tr>
                 <tr>
