--- a/single.html
+++ b/single.html
@@ -2,7 +2,7 @@
  * @Author: reber
  * @Mail: reber0ask@qq.com
  * @Date: 2019-04-10 10:45:02
- * @LastEditTime: 2019-12-16 01:19:52
+ * @LastEditTime: 2019-12-16 01:25:46
  -->
  <html>
     <head>
@@ -70,7 +70,7 @@
                     <td class="td1">IP 相关查询</td>
                     <td class="td2">
                         <a href="https://ip.cn">IP.cn</a> ||
-                        <a href="http://www.ip138.com">ip138</a> ||
+                        <a href="https://site.ip138.com" title="ip反查、域名历史ip查询">ip138</a> ||
                         <a href="https://www.ipaddress.com" title="查询ip、域名的信息">IPAddress</a> ||
                         <a href="http://ping.pe" title="多地ping">Ping.pe</a> ||
                         <a href="http://www.webkaka.com" title="多地ping、多地网站测速等">卡卡网</a> ||
